# Efficient-Inference-Playground

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-metal-int4.txt  requirements.txt  team_members.txt
configs/: hf_baseline_gemma4_e4b.json  hf_gemma4_e4b_needle.json  hf_kv_window_gemma4_e4b.json  hf_kv_window_gemma4_e4b_long_768.json  hf_quantized_gemma4_e4b_int4.json  ollama_gemma4.json  ollama_gemma4_needle.json  ollama_kvcache.json  ollama_quantized_gemma4_e4b.json
datasets/sargis_needle/: README.md
docs/: kv_recency_window_technical_note.md  needle_benchmark_plan.md  project_notes.md  references.md
presentation/: presentation_outline.md
prompts/: eval_prompts.jsonl  needle_eval_prompts.jsonl  needle_long_missing_01_02.jsonl  needle_long_prompts.jsonl  needle_medium_prompts.jsonl  needle_short_prompts.jsonl
report/: report_outline.md
results/: benchmark_results.xlsx  sargis_needle_benchmark_results.xlsx  team_final_benchmark_results.xlsx
results/processed/: experiment_matrix_status.md  final_benchmark_results_summary.md  hf_baseline_summary.md  ollama_needle_quality.csv  ollama_needle_summary.csv  ollama_needle_summary.md  (+2 more)
scripts/: build_final_benchmark_workbooks.py  build_final_results.py  check_benchmark_progress.py  check_ollama.py  combine_and_analyze.py  evaluate_quality.py  evaluate_task_quality.py  make_plots.py  merge_needle_into_benchmark_workbook.py  prepare_benchmark_prompts.py  prepare_prompts.py  run_hf_experiments.py  run_hf_sinkcache.py  run_hf_speculative.py  run_ollama_benchmark.py  summarize_results.py
(+8 files in other folders)
