[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efficient-inference-playground"
version = "0.1.0"
description = "Benchmark efficient LLM inference techniques across speed, memory, and quality."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

